fixing bug - all gaps are filled now

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ button{
 	padding: 5px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: box-shadow .1s ease-in;
+	cursor: pointer;
 }
 button:focus{
 	box-shadow: none;
